# rust-git-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.de.md  README.en.md  README.ja.md  README.md
.github/workflows/: rust.yml
src/: cli.rs  config.rs  git.rs  main.rs
src/ai/: anthropic.rs  mod.rs  openai.rs
