[package]
name = "rust-git-cli"
version = "0.1.0"
edition = "2021"
authors = ["duanyongcheng <duanyongcheng77@gmail.com>"]
license = "MIT"
description = "An intelligent Git commit tool with AI-powered bilingual commit message generation"
repository = "https://github.com/duanyongcheng/rust-git-cli"
keywords = ["git", "commit", "ai", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
git2 = "0.18"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
toml = "0.8"
dirs = "5.0"
